# myCub

./: README.md
application/libserial/: CMakeLists.txt  SerialPort.h
application/myCub-modules/: .gitignore
application/myCub-modules/ballDetector/: CMakeLists.txt  Detector.cpp
application/myCub-modules/displayDriver/: dispd.cpp
application/myCub-modules/faceDetector/: Detector.cpp
application/myCub-modules/gazeControl/: CMakeLists.txt  main.cpp
application/myCub-modules/gspeak/: gSpeak.lua
application/myCub-modules/lookAround/: lookAround.lua
application/myCub-modules/markerDetector/: CMakeLists.txt  Detector.cpp  Detector.h
application/myCub-modules/myCubInterface/: main.cpp
application/scripts/: ball_detection.xml  face_detection.xml  marker_detection.xml  rotate.lua  simple.lua
application/scripts/applications/: ball_tracker.xml  face_detection.xml
application/scripts/ball_tracker/: ball_tracker.xml  pm_ball.lua  pm_look.lua
contrib/scripts/: yarpviz.sh
contrib/tests/: camera.html  fly.lua  ikin.odg  scan_3d.lua  stress_bat.lua  stress_heading.lua  stress_joints.lua  stress_meminfo.lua  stress_motion.lua  stress_ping.lua  stress_sonar.lua  stress_test.lua  test_serial.lua  turn.lua  walk_front.lua
firmware/ADA/controller/: Makefile  controller.gpr  main.out
firmware/ADA/liblm4f120/: arm-i2c.adb  arm-i2c.ads  arm-int_img.ads  arm-strings-edit.adb  arm-strings-edit.ads  arm-strings.ads  arm-uart.adb  arm-uart.ads  arm.adb  arm.ads  lm4f-adc.ads  lm4f-gpio.ads  lm4f-htimer.adb  lm4f-htimer.ads  lm4f-i2c.ads  lm4f-uart.ads  lm4f.ads
firmware/ADA/ravenscar/: Makefile.rts.inc  build-rts.sh  context_switch-bb-arm.S  kernel_samba.ld  main.c  s-bbpara.ads  startup_lm4f120.c  system.ads
firmware/apps/: .gitignore  Kconfig  Makefile
firmware/apps/nshlib/: nsh_netcmds.c
firmware/apps/system/: .Kconfig.swp  Kconfig  Make.defs  Makefile
firmware/funkos/: CMakeLists.txt
firmware/funkos/conf/: FindAvrGcc.cmake
firmware/funkos/drivers/arduino/: wiring.c
firmware/funkos/drivers/ardulite/: pins_arduino.c  wiring.c  wiring.h  wiring_digital.c
firmware/funkos/drivers/serial/: uart.h  uart_async.c
firmware/funkos/kernel/: kernelcfg.h
firmware/funkos/kernel/atmega328p/: kernelswi.c  kerneltimer.c  kernelwdt.c  taskport.c  taskport.h
firmware/funkos/modules/graphics/widgets/: wgButton.c  wgButton.h  wgCheckBox.c  wgCheckBox.h  wgEditBox.c  wgEditBox.h  wgLabel.c  wgLabel.h  wgProgressBar.c  wgProgressBar.h  wgRadioButton.c  wgRadioButton.h  wgSurface.c  wgSurface.h  widgetcfg.h  widgets.c  widgets.h
firmware/funkos/projects/hello_world/: main.c
firmware/funkos/projects/roundrobin/: roundrobin.c
firmware/funkos/projects/srf04/: .main.c.swp  main.c
firmware/nuttx/: .gitignore
firmware/nuttx/configs/: Kconfig
firmware/nuttx/drivers/: Kconfig  Makefile  servo.c
firmware/nuttx/include/: ctype.h
firmware/nuttx/sched/: .gitignore
main/components/: .gitignore
main/components/ballDetector/: Detector.h  objectDetector.cpp
main/components/displayDriver/: Makefile  dispd.cpp
main/components/faceDetector/: CMakeLists.txt  Detector.cpp  Detector.h  objectDetector.cpp
main/components/feelScared/: feelScared.lua
main/components/gSpeak/: cache.db  gSpeak.lua
(+172 files in other folders)
